Fix Java test suite: JDK 21 compatibility, generated code, and test assertions
- Fix JDK 21 FFM API compatibility in Transceiver.java, TestCodecCabi.java,
  and TestTransceiverCabi.java (allocateFrom→allocateUtf8String,
  getString→getUtf8String, allocateFrom→allocateArray for byte arrays)
- Fix generated code: sentry_link Frame.java SYNC constant, direction_qualified
  missing tag fields, struct_features missing alignTo method
- Add missing string_features generated types (NameStr, LabelStr, BoundedStr,
  PackedStr, TermStr)
- Fix TestCodecCabi decode tests to handle CABI returning full frame bytes
- Fix TestTransceiverCabi: capture conduit_start/conduit_add_peer return values,
  correct remove callback assertions (returns count removed, not error code),
  handle TCP server transport gracefully
- Add *.class to .gitignore

All 841 tests pass (321 Java + 520 Python).

https://claude.ai/code/session_01NFn7CzxotB8WZSRHgE9NMz